Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2023-04-05:

- Fixed a spurious syntax error in compound assignments upon encountering a
  pair of repeated opening parentheses '(('. This bug behaved differently
  depending on whether the compound assignment was outside or within a command
  substitution of the form $(...) or ${ ...; }. Both cases are now fixed.

2023-04-03:

- Fixed multiple crashing bugs in discipline functions invoked from non-forked
  subshells, including corruption of the $_ variable.

2023-04-02:

- Corrected the 2022-07-05 fix for the detection of a syntax error in
  compound assignments to associative arrays.

- Fixed spurious syntax error in ${parameter:offset:length}: the arithmetic
  expressions 'offset' and 'length' may now contain the operators ( ) & |.

2023-03-29:

- Fixed a bug in 'printf -v' (added on 2021-11-18) where using the %B format
  specifier would overwrite any data already written to the variable.

2023-03-26:

- Fixed an intermittent crash in 'command -x' experienced on some arm/arm64
  systems running Linux.

- Fixed a bug that caused 'printf "%(%Z)T\n" now' to print nonsense strings
  such as 'ica' on Cygwin.

2023-03-24:

- Fixed a crash in read -d D in multibyte locales that occurred when a byte
  with the 8th bit set was passed as the delimiter character D. For example,
  read -d $'\200' crashed in a UTF-8 locale. (Note that multibyte delimiter
  characters are not supported yet.)

2023-03-23:

- A bug has been fixed in 'printf' and 'print -f' that caused the %a, %A, %e,
  %E, %f, %F, %g, and %G conversion specifiers to evaluate any unexpanded
  arithmetic expression passed to them twice, causing any side effects, such
  as incrementing a variable, to be incorrect. Bug introduced in 93t- (2008).

- The POSIX compatibility mode has been amended to cause 'printf' to parse only
  decimal/hexadecimal/octal constants for its numerical conversion specifiers,